--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -2379,16 +2379,18 @@
     \subfiglist_group_var_return:NN \dim_set:Nn \subfiglist_tempb_dim
     \group_end:
     
-    \dim_compare:nNnT { #2 } < { \subfiglist_tempa_dim }
-    {
-      \fp_compare:nNnF { #1 } = { \c_inf_fp }
-      {
-        \dim_add:Nn #3 { ( \subfiglist_tempa_dim - #2 ) * \dim_ratio:nn { 1pt } { \fp_to_dim:N #1 } }
-      }
-      \dim_set_eq:NN #2 \subfiglist_tempa_dim
-    }
     \subfiglist_is_nan:VF \subfiglist_temp_fp
     {
+      \dim_compare:nNnTF { #2 } < { \subfiglist_tempa_dim }
+      {
+        \fp_compare:nNnF { #1 } = { \c_inf_fp }
+        {
+          \dim_add:Nn #3 { ( \subfiglist_tempa_dim - #2 ) * \dim_ratio:nn { 1pt } { \fp_to_dim:N #1 } }
+        }
+        \dim_set_eq:NN #2 \subfiglist_tempa_dim
+      }{
+        \dim_add:Nn #3 { #2 * \dim_ratio:nn { 1pt } { \fp_to_dim:N \subfiglist_temp_fp } }
+      }
       \fp_set:Nn #1 { 1 / ( ( 1 / #1 ) + ( 1 / \subfiglist_temp_fp ) ) }
     }
     \dim_add:NV #3 \subfiglist_tempb_dim
