--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -1784,15 +1784,15 @@
 
 \cs_new:Npn \subfiglist_parse_canvas:NN #1 #2
 %
-% #1: Sequence containing tokenized specification string
-% #2: Token list variable for storing tokenized specification string
+% #1: Token list variable for storing tokenized specification string
+% #2: Sequence containing tokenized specification string
 %
 {
-  \seq_pop_left:NN #1 \subfiglist_tempa_tl
+  \seq_pop_left:NN #2 \subfiglist_tempa_tl
   \subfiglist_parse_wrap_token:NV \subfiglist_tempb_tl \subfiglist_tempa_tl
-  \tl_put_right:NV #2 \subfiglist_tempb_tl
+  \tl_put_right:NV #1 \subfiglist_tempb_tl
   
-  \seq_get_left:NN #1 \subfiglist_tempa_tl
+  \seq_get_left:NN #2 \subfiglist_tempa_tl
   \bool_lazy_any:nF
   {
     { \quark_if_no_value_p:N \subfiglist_tempa_tl }
@@ -1801,51 +1801,51 @@
   }{
     \tl_clear:N \subfiglist_tempa_tl
     \subfiglist_parse_make_token:NnV \subfiglist_tempb_tl { space } \subfiglist_tempa_tl
-    \tl_put_right:NV #2 \subfiglist_tempb_tl
+    \tl_put_right:NV #1 \subfiglist_tempb_tl
   }
 }
 
 \cs_new:Npn \subfiglist_parse_separator:NN #1 #2
 %
-% #1: Sequence containing tokenized specification string
-% #2: Token list variable for storing tokenized specification string
+% #1: Token list variable for storing tokenized specification string
+% #2: Sequence containing tokenized specification string
 %
 {
-  \seq_pop_left:NN #1 \subfiglist_tempa_tl
+  \seq_pop_left:NN #2 \subfiglist_tempa_tl
   \subfiglist_parse_wrap_token:NV \subfiglist_tempb_tl \subfiglist_tempa_tl
-  \tl_put_right:NV #2 \subfiglist_tempb_tl
+  \tl_put_right:NV #1 \subfiglist_tempb_tl
 }
 
 \cs_new:Npn \subfiglist_parse_newline:NN #1 #2
 %
-% #1: Sequence containing tokenized specification string
-% #2: Token list variable for storing tokenized specification string
+% #1: Token list variable for storing tokenized specification string
+% #2: Sequence containing tokenized specification string
 %
 {
-  \seq_pop_left:NN #1 \subfiglist_tempa_tl
+  \seq_pop_left:NN #2 \subfiglist_tempa_tl
   \subfiglist_parse_wrap_token:NV \subfiglist_tempb_tl \subfiglist_tempa_tl
-  \tl_put_right:NV #2 \subfiglist_tempb_tl
+  \tl_put_right:NV #1 \subfiglist_tempb_tl
 }
 
 \cs_new:Npn \subfiglist_parse_subblock:NN #1 #2
 %
-% #1: Sequence containing specification string
-% #2: Token list variable for storing tokenized specification string
+% #1: Token list variable for storing tokenized specification string
+% #2: Sequence containing specification string
 %
 {
-  \seq_pop_left:NN #1 \subfiglist_tempa_tl
+  \seq_pop_left:NN #2 \subfiglist_tempa_tl
   \subfiglist_tl_set_tail:NV \subfiglist_tempb_tl \subfiglist_tempa_tl
   % Remove one level of braces
   \subfiglist_tl_set_unwrapped:NV \subfiglist_tempa_tl \subfiglist_tempb_tl
   \group_begin:
-    \tl_clear:N #2
-    \subfiglist_parse_spec_tokens:VN \subfiglist_tempa_tl #2
-    \subfiglist_parse_make_token:NnV \subfiglist_tempa_tl { subblock } #2
+    \tl_clear:N #1
+    \subfiglist_parse_spec_tokens:NV #1 \subfiglist_tempa_tl
+    \subfiglist_parse_make_token:NnV \subfiglist_tempa_tl { subblock } #1
     \subfiglist_group_var_return:NN \tl_set:Nn \subfiglist_tempa_tl
   \group_end:
-  \tl_put_right:NV #2 \subfiglist_tempa_tl
+  \tl_put_right:NV #1 \subfiglist_tempa_tl
   
-  \seq_get_left:NN #1 \subfiglist_tempa_tl
+  \seq_get_left:NN #2 \subfiglist_tempa_tl
   \bool_lazy_any:nF
   {
     { \quark_if_no_value_p:N \subfiglist_tempa_tl }
@@ -1854,44 +1854,44 @@
   }{
     \tl_clear:N \subfiglist_tempa_tl
     \subfiglist_parse_make_token:NnV \subfiglist_tempb_tl { space } \subfiglist_tempa_tl
-    \tl_put_right:NV #2 \subfiglist_tempb_tl
+    \tl_put_right:NV #1 \subfiglist_tempb_tl
   }
 }
 
 % Parser for lines
 \cs_new:Npn \subfiglist_parse_line:NN #1 #2
 %
-% #1: Sequence containing tokenized specification string
-% #2: Token list variable for storing tokenized specification string
+% #1: Token list variable for storing tokenized specification string
+% #2: Sequence containing tokenized specification string
 %
 {
-  \seq_get_left:NN #1 \subfiglist_tempa_tl
+  \seq_get_left:NN #2 \subfiglist_tempa_tl
   \tl_clear:N \subfiglist_tempb_tl
-
+  
   \bool_until_do:nn
   {
     \bool_lazy_or_p:nn
       { \quark_if_no_value_p:N \subfiglist_tempa_tl }
       { ! \subfiglist_parse_is_line_p:V \subfiglist_tempa_tl }
   }{
-    \seq_pop_left:NN #1 \subfiglist_tempa_tl
+    \seq_pop_left:NN #2 \subfiglist_tempa_tl
     \subfiglist_parse_wrap_token:NV \subfiglist_tempa_tl \subfiglist_tempa_tl
     \tl_put_right:NV \subfiglist_tempb_tl \subfiglist_tempa_tl
-    \seq_get_left:NN #1 \subfiglist_tempa_tl
+    \seq_get_left:NN #2 \subfiglist_tempa_tl
   }
   
-  \tl_set_eq:NN \subfiglist_tempa_tl #2
+  \tl_set_eq:NN \subfiglist_tempa_tl #1
   \group_begin:
-    \tl_clear:N #2
-    \seq_clear:N #1
+    \tl_clear:N #1
+    \seq_clear:N #2
     \tl_map_inline:Nn \subfiglist_tempb_tl
     {
-      \seq_put_right:Nn #1 { ##1 }
+      \seq_put_right:Nn #2 { ##1 }
     }
     
-    \bool_until_do:nn { \seq_if_empty_p:N #1 }
+    \bool_until_do:nn { \seq_if_empty_p:N #2 }
     {
-      \seq_get_left:NN #1 \subfiglist_tempa_tl
+      \seq_get_left:NN #2 \subfiglist_tempa_tl
       
       \tl_map_inline:nn { { canvas } { separator } { subblock } { error } }
       {
@@ -1903,17 +1903,17 @@
       }
     }
     
-  \subfiglist_group_var_return:NN \tl_set:Nn #2
+  \subfiglist_group_var_return:NN \tl_set:Nn #1
   \group_end:
-
-  \subfiglist_parse_make_token:NnV \subfiglist_tempb_tl { line } #2
+  
+  \subfiglist_parse_make_token:NnV \subfiglist_tempb_tl { line } #1
   \tl_put_right:NV \subfiglist_tempa_tl \subfiglist_tempb_tl
-  \tl_set_eq:NN #2 \subfiglist_tempa_tl
+  \tl_set_eq:NN #1 \subfiglist_tempa_tl
 }
 
 \cs_new:Npn \subfiglist_parse_error:NN #1 #2
 {
-  \seq_pop_left:NN #1 \subfiglist_tempa_tl
+  \seq_pop_left:NN #2 \subfiglist_tempa_tl
   \tl_set:Nn \subfiglist_tempb_tl { Parser~encountered~unexpected~token~` }
   \tl_put_right:Nf \subfiglist_tempb_tl { \tl_head:V \subfiglist_tempa_tl }
   \tl_put_right:Nn \subfiglist_tempb_tl { ' }
@@ -1944,15 +1944,15 @@
 \cs_generate_variant:Nn \subfiglist_parse_make_token:NnN { NnV }
 
 % Parser for subfiglist specification
-\cs_new:Npn \subfiglist_parse_spec_tokens:nN #1 #2
+\cs_new:Npn \subfiglist_parse_spec_tokens:Nn #1 #2
 %
-% #1: Token list containing tokenized specification string
-% #2: Token list variable for storing parsed specification string
+% #1: Token list variable for storing parsed specification string
+% #2: Token list containing tokenized specification string
 %
 {
   \group_begin:
     \seq_clear:N \subfiglist_spec_tokens_seq
-    \tl_map_inline:nn { #1 }
+    \tl_map_inline:nn { #2 }
     {
       \seq_put_right:Nn \subfiglist_spec_tokens_seq { ##1 }
     }
@@ -1965,16 +1965,16 @@
       {
         \bool_if:nT { \subfiglist_use:c { subfiglist_parse_is_ ##1 _p:V } \subfiglist_tempa_tl }
         {
-          \subfiglist_use:c { subfiglist_parse_ ##1 :NN } \subfiglist_spec_tokens_seq #2
+          \subfiglist_use:c { subfiglist_parse_ ##1 :NN } #1 \subfiglist_spec_tokens_seq
           \tl_map_break:
         }
       }
     }
-  \subfiglist_group_var_return:NN \tl_set:Nn #2
+  \subfiglist_group_var_return:NN \tl_set:Nn #1
   \group_end:
 }
 
-\cs_generate_variant:Nn \subfiglist_parse_spec_tokens:nN { VN }
+\cs_generate_variant:Nn \subfiglist_parse_spec_tokens:Nn { NV }
 
 
 
@@ -3218,7 +3218,7 @@
     \subfiglist_identifier_count_int
     
  % Parse subfiglist specification
-  \subfiglist_parse_spec_tokens:VN \subfiglist_tokenized_spec_tl \subfiglist_parsed_spec_tl
+  \subfiglist_parse_spec_tokens:NV \subfiglist_parsed_spec_tl \subfiglist_tokenized_spec_tl
   
   \prop_clear:N \subfiglist_canvas_prop
   
