Renamed command \subfiglistset to \subfiglistsetup

--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -259,7 +259,7 @@
 \ProcessKeysOptions { subfiglist }
 
 % Command for explicit manipulation of keys
-\NewDocumentCommand \subfiglistset { m }
+\NewDocumentCommand \subfiglistsetup { m }
 {
   \keys_set:nn { subfiglist } { #1 }
 }
