--- a/subfiglist.tex
+++ b/subfiglist.tex
@@ -216,7 +216,7 @@
 
 \verb|\usepackage[options]{subfiglist}|
 
-Options have to be given in a key-value comma separated list as in \texttt{key1=val1,key2=val2}. After loading the package, options can also be specified or overwritten with the command \verb|\subfiglistset{options}|. Currently the following options are supported.
+Options have to be given in a key-value comma separated list as in \texttt{key1=val1,key2=val2}. After loading the package, options can also be specified or overwritten with the command \verb|\subfiglistsetup{options}|. Currently the following options are supported.
 
 \begin{description}
 \item[\texttt{caption}\enskip] Can be set to \texttt{true} or \texttt{false} and will be set to \texttt{true} when specified completely without value. Default value is \texttt{true}. This option cannot be changed after \verb|\begin{document}|.
